--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "type": "commonjs",
   "main": "src/index.js",
   "scripts": {
+    "build": "rm -rf dist && mkdir dist && cp src/index.js dist/index.js",
+    "start": "node src/index.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
