--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,6 @@ jobs:
 
       - name: Upload Artifact
         run: |
-          jfrog rt u "dist/*" my-npm-builds-local/ --build-name=my-app --build-number=$GITHUB_RUN_NUMBER
+          jfrog rt u "dist/*" my-npm-build-local/ --build-name=my-app --build-number=$GITHUB_RUN_NUMBER
           jfrog rt build-publish my-app $GITHUB_RUN_NUMBER
 
